// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component/Button Button Add 1`] = `
<button
  className="Button-pzvjfl-0 fMftLg"
>
  Hinzufügen
</button>
`;

exports[`Storyshots Component/Button Button Order 1`] = `
<button
  className="Button-pzvjfl-0 fMftLg"
>
  Bestellen
</button>
`;

exports[`Storyshots Component/Header Header Home 1`] = `
<header
  className="Header__Container-sc-17wre1r-0 hRODWv"
>
  <h1
    className="Header__Headline-sc-17wre1r-1 duXfVz"
  >
    Home
  </h1>
</header>
`;

exports[`Storyshots Component/ProductOverviewCard Product Overview Card Default 1`] = `
<div
  className="ProductOverviewCard__Container-sc-1ufyc7s-0 ndfMM"
>
  <h2
    className="ProductOverviewCard__Headline-sc-1ufyc7s-1 hIOKLl"
  >
    Blaue Box
  </h2>
  <div
    className="ProductOverviewCard__CardImage-sc-1ufyc7s-2 giqhaU"
  >
    <img
      alt="Blaue Box"
      src="https://via.placeholder.com/250"
    />
  </div>
  <article
    className="ProductOverviewCard__CardDescription-sc-1ufyc7s-3 dWKWIC"
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa ...
  </article>
  <aside
    className="ProductOverviewCard__CardPrice-sc-1ufyc7s-4 jwVEoe"
  >
    € 
    328.5
  </aside>
</div>
`;

exports[`Storyshots Component/Searchbar Search 1`] = `
<input
  className="Searchbar-sc-1bd71k1-0 fMbmEz"
  placeholder="Suche"
/>
`;

exports[`Storyshots Pages/Categories Categories 1`] = `
Array [
  <header
    className="Header__Container-sc-17wre1r-0 hRODWv"
  >
    <h1
      className="Header__Headline-sc-17wre1r-1 duXfVz"
    />
  </header>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;

exports[`Storyshots Pages/CheckoutPage Standard 1`] = `
Array [
  <h1>
    Checkout
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;

exports[`Storyshots Pages/CustomersOverviewPage Standard 1`] = `
Array [
  <h1>
    Customers Overview
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;

exports[`Storyshots Pages/LoadingPage Standard 1`] = `
Array [
  <h1>
    Loading
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;

exports[`Storyshots Pages/OrderConfirmationPage Standard 1`] = `
Array [
  <h1>
    Order Confirmation
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;

exports[`Storyshots Pages/ProductPage Standard 1`] = `
Array [
  <h1>
    Product Page
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;

exports[`Storyshots Pages/ProductsOverviewPage Standard 1`] = `
Array [
  <h1>
    Products Overview
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;

exports[`Storyshots Pages/ProfilePage Standard 1`] = `
Array [
  <h1>
    Profile
  </h1>,
  <div
    className="NavbarBottom__Container-sc-17hvsnk-0 guYphZ"
  >
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 klXJLp"
      href="/"
      onClick={[Function]}
    >
      Home
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/product-overview"
      onClick={[Function]}
    >
      Suche
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/checkout"
      onClick={[Function]}
    >
      Warenkorb
    </a>
    <a
      className="NavbarBottom__NavLink-sc-17hvsnk-1 btIWbG"
      href="/profile"
      onClick={[Function]}
    >
      Profil
    </a>
  </div>,
]
`;
